@@ -1,74 +1,117 @@
-#!/usr/bin/env bash
+#!/bin/sh
 
-#
-# 发布脚本
-# @author craneding
-# @date 2016年02月01日13:00:00
-# @description Copyright (c) 2015, github.com/dapeng-soa All Rights Reserved.
-#
+export JVM_HOME='opt/oracle-server-jre'
+export PATH=$JVM_HOME/bin:$PATH
 
-workdir=`pwd`
+PRGNAME=soa-service
+ADATE=`date +%Y%m%d%H%M%S`
+PRGDIR=`pwd`
 dirname $0|grep "^/" >/dev/null
 if [ $? -eq 0 ];then
-   workdir=`dirname $0`
+   PRGDIR=`dirname $0`
 else
     dirname $0|grep "^\." >/dev/null
     retval=$?
     if [ $retval -eq 0 ];then
-        workdir=`dirname $0|sed "s#^.#$workdir#"`
+        PRGDIR=`dirname $0|sed "s#^.#$PRGDIR#"`
     else
-        workdir=`dirname $0|sed "s#^#$workdir/#"`
+        PRGDIR=`dirname $0|sed "s#^#$PRGDIR/#"`
     fi
 fi
 
-cd $workdir
-
-
-# config log dir
-logdir=$workdir/../logs
-if [ ! -d "$logdir" ]; then
-	mkdir "$logdir"
+LOGDIR=$PRGDIR/../logs
+if [ ! -d "$LOGDIR" ]; then
+        mkdir "$LOGDIR"
 fi
 
-# config java home
-# export JAVA_HOME=""
-# export PATH="$JAVA_HOME/bin:$PATH"
+CLASSPATH=$PRGDIR/classes
 
-# env option(priority than vm option)
-# soa_container_port (default: 9090)
-# soa_zookeeper_host (default: 127.0.0.1:2181)
-# soa_monitor_enable (default: false)
-# soa_container_usethreadpool (default: true)
-# soa_core_pool_size (default: Runtime.getRuntime().availableProcessors() * 2)
-# soa_remoting_mode (default: remote [remote/local])
-# soa_max_read_buffer_size (defalut: 1024 * 1024 * 5)
-# soa_local_host_name (default: null)
+filelist=`find $PRGDIR/lib/* -type f -name "*.jar"`
+for filename in $filelist
+do
+  CLASSPATH=$CLASSPATH:$filename
+done
 
-# vm option
-# soa.container.port (default: 9090)
-# soa.zookeeper.host (default: 127.0.0.1:2181)
-# soa.monitor.enable (default: false)
-# soa.container.usethreadpool (default: true)
-# soa.core.pool.size (default: Runtime.getRuntime().availableProcessors() * 2)
-# soa.remoting.mode (default: remote [remote/local])
-# soa.max.read.buffer.size (defalut: 1024 * 1024 * 5)
-# soa.local.host.name (default: null)
+#DEBUG="-Xdebug -Xnoagent -Djava.compiler=NONE -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=9997"
+JMX_OPTS="-Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.port=1091 -Dcom.sun.management.jmxremote.ssl=false -Dcom.sun.management.jmxremote.authenticate=false"
+NETTY_OPTS=" -Dio.netty.leakDetectionLevel=advanced "
+#GC_OPTS=" -XX:+HeapDumpOnOutOfMemoryError -XX:+PrintGCDateStamps -Xloggc:$LOGDIR/gc-$PRGNAME-$ADATE.log -XX:+PrintGCDetails -XX:+PrintPromotionFailure -XX:+PrintGCApplicationStoppedTime -Dlog.dir=$PRGDIR/.."
+GC_OPTS=" -XX:NewRatio=1 -XX:SurvivorRatio=30 -XX:+HeapDumpOnOutOfMemoryError -XX:+PrintGCDateStamps -Xloggc:$LOGDIR/gc-$PRGNAME-$ADATE.log -XX:+PrintPromotionFailure -XX:+PrintGCApplicationStoppedTime -XX:+PrintGCDetails -Dlog.dir=$PRGDIR/.."
 
-# netty option
-# default : one thread cache is about 1MB
-# io.netty.allocator.tinyCacheSize (default: 512)
-# io.netty.allocator.smallCacheSize (default: 256)
-# io.netty.allocator.normalCacheSize (default: 64)
-# io.netty.allocator.maxCachedBufferCapacity (default: 32768)
 
-# JVM_OPTS=""
-# DEBUG_OPTS="-Xdebug -Xnoagent -Djava.compiler=NONE -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5000"
-# USER_OPTS="-Dsoa.container.port=9090 -Dsoa.zookeeper.host=127.0.0.1:2181 -Dio.netty.leakDetectionLevel=advanced -XX:MaxDirectMemorySize=128M -Dsoa.monitor.enable=false -Dsoa.core.pool.size=100"
+#预分配内存, 会造成jvm进程启动的时候慢一点, 但运行时减轻gc停顿, 减少内存碎片
+MEM_OPTS="-XX:+AlwaysPreTouch"
+#如果线程数较多，函数的递归较少，线程栈内存可以调小节约内存，默认1M。
+MEM_OPTS="$MEM_OPTS -Xss256k"
 
-JVM_OPTS="-Xms256m -Xmx256m -Xloggc:$logdir/gc.log -XX:+PrintGCDateStamps -XX:+PrintGCDetails -XX:+PrintGC -XX:+HeapDumpOnOutOfMemoryError"
-DEBUG_OPTS=""
-SOA_BASE="-Dsoa.base=$workdir/../ -Dsoa.run.mode=native -Dsoa.transactional.enable=true -Dsoa.monitor.enable=true -Dsoa.core.pool.size=100"
-USER_OPTS=""
+#堆外内存的最大值默认约等于堆大小，可以显式将其设小，获得一个比较清晰的内存总量预估
+#MEM_OPTS="$MEM_OPTS -XX:MaxDirectMemorySize=1g"
 
-nohup java $JVM_OPTS $SOA_BASE $DEBUG_OPTS $USER_OPTS -cp ./dapeng-bootstrap.jar com.github.dapeng.bootstrap.Bootstrap >> $logdir/catalina.out 2>&1 &
-echo $! > $logdir/pid.txt
+#CMSInitiatingOccupancyFraction 设置年老代空间被使用75%后出发CMS收集器
+#UseCMSInitiatingOccupancyOnly 只在达到阈值后才触发CMS
+#GC_OPTS="$GC_OPTS -XX:+UseConcMarkSweepGC -XX:CMSInitiatingOccupancyFraction=75 -XX:+UseCMSInitiatingOccupancyOnly"
+GC_OPTS="$GC_OPTS -XX:+UseParallelGC -XX:+UseParallelOldGC"
+
+# System.gc() 使用CMS算法
+#GC_OPTS="$GC_OPTS -XX:+ExplicitGCInvokesConcurrent"
+
+# CMS中的下列阶段并发执行
+#GC_OPTS="$GC_OPTS -XX:+ParallelRefProcEnabled -XX:+CMSParallelInitialMarkEnabled"
+
+# 根据应用的对象生命周期设定，减少事实上的老生代对象在新生代停留时间，加快YGC速度
+GC_OPTS="$GC_OPTS -XX:MaxTenuringThreshold=3"
+
+# 如果OldGen较大，加大YGC时扫描OldGen关联的卡片(每个card大小为512byte)，加快YGC速度，默认值256较低(256*512B)=128K
+GC_OPTS="$GC_OPTS -XX:+UnlockDiagnosticVMOptions -XX:ParGCCardsPerStrideChunk=1024"
+
+SOA_BASE="-Dsoa.base=$PRGDIR/../ -Dsoa.run.mode=native"
+
+OPTIMIZE_OPTS="-XX:-UseBiasedLocking -XX:AutoBoxCacheMax=20000 -Djava.security.egd=file:/dev/./urandom"
+
+SHOTTING_OPTS="-XX:+PrintCommandLineFlags -XX:-OmitStackTraceInFastThrow -XX:ErrorFile=${LOGDIR}/hs_err_%p.log"
+SHOTTING_OPTS="$SHOTTING_OPTS -XX:+UnlockCommercialFeatures -XX:+FlightRecorder -XX:+UnlockDiagnosticVMOptions -XX:+DebugNonSafepoints"
+
+OTHER_OPTS="-Djava.net.preferIPv4Stack=true -Djava.awt.headless=true -Dfile.encoding=UTF-8 -Dsun.jun.encoding=UTF-8"
+
+apmEnable="$apm_enable"
+if [ "$apmEnable" == "true" ]; then
+    JAVA_OPTS="$E_JAVA_OPTS $NETTY_OPTS $SOA_BASE $DEBUG_OPTS $USER_OPTS $MEM_OPTS $GC_OPTS $OPTIMIZE_OPTS $SHOTTING_OPTS $JMX_OPTS $OTHER_OPTS $APM_OPTS"
+else
+    JAVA_OPTS="$E_JAVA_OPTS $NETTY_OPTS $SOA_BASE $DEBUG_OPTS $USER_OPTS $MEM_OPTS $GC_OPTS $OPTIMIZE_OPTS $SHOTTING_OPTS $JMX_OPTS $OTHER_OPTS"
+fi
+
+echo JAVA_OPTS=$JAVA_OPTS
+
+# SIGTERM-handler  graceful-shutdown
+pid=0
+process_exit() {
+ if [ $pid -ne 0 ]; then
+  kill -SIGTERM "$pid"
+  wait "$pid"
+ fi
+ fluentPid=`pgrep -f fluent-bit`
+ if [ $fluentPid -ne 0 ]; then
+   kill -SIGTERM "$fluentPid"
+   wait "$fluentPid"
+  fi
+ exit 143; # 128 + 15 -- SIGTERM
+}
+
+
+trap 'kill ${!};process_exit' SIGTERM
+
+nohup java -server $JAVA_OPTS -cp ./dapeng-bootstrap.jar com.github.dapeng.bootstrap.Bootstrap >> $LOGDIR/console.log 2>&1 &
+pid="$!"
+echo $pid > $LOGDIR/pid.txt
+
+fluentBitEnable="$fluent_bit_enable"
+
+if [ "$fluentBitEnable" == "" ]; then
+    fluentBitEnable="false"
+fi
+
+if [ "$fluentBitEnable" == "true" ]; then
+   nohup sh /opt/fluent-bit/fluent-bit.sh >> $LOGDIR/fluent-bit.log 2>&1 &
+fi
+
+wait $pid
